[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/Themes/theme_dark.tres" type="Theme" id=1]
[ext_resource path="res://UI/UIStatusbar.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/font_11.tres" type="DynamicFont" id=3]

[node name="UIStatusbar" type="Panel"]
anchor_right = 1.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_left = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_right = 1910.0
margin_bottom = 24.0

[node name="Left" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 948.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PositionLabel" type="Label" parent="MarginContainer/HBoxContainer/Left"]
margin_top = 5.0
margin_right = 54.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 3 )
text = "Position: -"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sep" type="Label" parent="MarginContainer/HBoxContainer/Left"]
margin_left = 58.0
margin_top = 5.0
margin_right = 62.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 3 )
text = "|"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ZoomLabel" type="Label" parent="MarginContainer/HBoxContainer/Left"]
margin_left = 66.0
margin_top = 5.0
margin_right = 108.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 3 )
text = "Zoom: -"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sep2" type="Label" parent="MarginContainer/HBoxContainer/Left"]
margin_left = 112.0
margin_top = 5.0
margin_right = 116.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 3 )
text = "|"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PressureLabel" type="Label" parent="MarginContainer/HBoxContainer/Left"]
margin_left = 120.0
margin_top = 5.0
margin_right = 176.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 3 )
text = "Pressure: -"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sep3" type="Label" parent="MarginContainer/HBoxContainer/Left"]
margin_left = 180.0
margin_top = 5.0
margin_right = 184.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 3 )
text = "|"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FpsLabel" type="Label" parent="MarginContainer/HBoxContainer/Left"]
margin_left = 188.0
margin_top = 5.0
margin_right = 219.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 3 )
text = "FPS: -"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 952.0
margin_right = 1900.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="StrokesLabel" type="Label" parent="MarginContainer/HBoxContainer/Right"]
margin_left = 837.0
margin_top = 5.0
margin_right = 890.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 3 )
text = "Strokes: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sep" type="Label" parent="MarginContainer/HBoxContainer/Right"]
margin_left = 894.0
margin_top = 5.0
margin_right = 898.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 3 )
text = "|"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointsLabel" type="Label" parent="MarginContainer/HBoxContainer/Right"]
margin_left = 902.0
margin_top = 5.0
margin_right = 948.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 3 )
text = "Points: 0"
__meta__ = {
"_edit_use_anchors_": false
}
